Provide a kcm module to choose a virtual keyboard

BUG: 430850